data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_9.wast
;; 10. **Test with `br_table` and Implicit Return**:    - A `br_table` inside a block that, depending on the index, either branches or implicitly returns from the block.    - *Constraint*: Ensures proper resolution between branching and returning behavior.    - *Relation*: Evaluates the correct update of label stack when switching between branch labels and implicit return handling.

(assert_invalid
  (module 
    (func $block-br_table-implicit-return 
      (result i32)
      (i32.const 1) 
      (block (result i32)
        (i32.const 0)
        (br_table 0 (i32.const 2))
        (i32.const 3)
      )
    )
  )
  "type mismatch"
)